<resources>
    <string name="app_name">SMS Manager</string>
    <string name="messages">Messages</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="content_small">This is the preview of the full SMS. To read more click on the SMS.</string>
    <string name="title">SENDER</string>
    <string name="search">Search</string>
    <string name="write_message">Write Message..</string>
    <string name="favorite_set_text">Set as Private chat</string>
    <string name="favorites_removed_text">Remove from Private Chat</string>
    <string name="favorite_remove_fail_message">Fail to Remove</string>
    <string name="please_write_number">Please provide a number</string>
    <string name="please_write_message">Please write some message</string>
    <string name="cant_send">Can\'t send sms to this contact.</string>
    <string name="speech_prompt"><![CDATA[Say something]]></string>
    <string name="speech_not_supported">Sorry! Your device dose not support speech input</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>
    <string name="lets_start">Lets Start</string>
    <string name="permission_subtitle">In order to serve you better, please enable the following permissions. Then you can enjoy all of our features.</string>
    <string name="sms">SMS</string>
    <string name="sms_subtitle">Set as your default SMS app to get your SMS messages and remind you in time.</string>
    <string name="contact_subtitle">To provide contact management feature and show SMS contacts.</string>
    <string name="notification">Notification</string>
    <string name="notification_subtitle">Enable to get and notify message from social and communication applications</string>
    <string name="skip">Skip</string>
    <string name="dummy_total_message">Total 0 Messages</string>
    <string name="unread_only">Unread only</string>
    <string name="no_otp_received">No OTP Received</string>
    <string name="no_private_message_received">No Private Message Received</string>
    <string name="no_message_starred">No Message Starred</string>
    <string name="no_transaction_message">No Transaction Message</string>
    <string name="no_offer_message">No Offer Message</string>
    <string name="copy_hint">Tap on CODE to copy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_this_app">Share this App</string>
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="speed_dial">Speed Dial</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
