<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_invite_friends"
                android:icon="@drawable/ic_share_white_24dp"
                android:title="@string/share_this_app" />


        </menu>
    </item>
</menu>