<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.PermissionsActivity">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/permission_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lets_start"
                android:textColor="@color/permission_title"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/permission_subtitle"
                android:textColor="@color/permission_title"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/sms_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_permission_inactive"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sms_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/sms"
                            android:textColor="@color/permission_title"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/sms_subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/sms_subtitle"
                            android:textColor="@color/permission_title"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/sms_image"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/sms"
                            android:src="@drawable/permission_inactive">

                        </ImageView>

                    </FrameLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/contact_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_permission_inactive"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/contact_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/contacts"
                            android:textColor="@color/permission_title"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/contact_subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/contact_subtitle"
                            android:textColor="@color/permission_title"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/contact_image"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/contacts"
                            android:src="@drawable/permission_inactive">

                        </ImageView>

                    </FrameLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/notification_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_permission_inactive"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/notification_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/notification"
                            android:textColor="@color/permission_title"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/notification_subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/notification_subtitle"
                            android:textColor="@color/permission_title"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/notification_image"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/notification"
                            android:src="@drawable/permission_inactive">

                        </ImageView>

                    </FrameLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/permission_title"
            android:textSize="14sp" />
    </RelativeLayout>
</layout>